# bloom-filter

./: README.md  bloom-filter.cabal  bloom-filter.nix  default.nix  experiment.out  words.txt
Data/: BloomFilter.hs
Data/BitArray/: Extras.hs
Data/BloomFilter/: Hash.hs  Util.hs
app/: Main.hs  Test.hs
cbits/: lookup3.c
doc/: refs.bib  report.tex
