cabal-version:       3.0
name:                bloom-filter
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
copyright:           2020 Arnau Abella
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
tested-with:         GHC == 8.8.1
bug-reports:         https://github.com/monadplus/bloom-filter/issues
synopsis:
description:
category:            Machine Learning
extra-source-files:  README.md cbits/lookup3.c cbits/lookup3.h

source-repository head
  type:                git
  location:            https://github.com/monadplus/bloom-filter

common common-options
  ghc-options: -Wall
               -O2
  default-language: Haskell2010

common common-dependencies
  build-depends: base            >=4.9     && <4.14

executable bloom-filter
  import: common-dependencies
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: bloom-filter
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N

library
  import: common-dependencies
  import: common-options
  build-depends:
     , bytestring  >=0.10.8.2 && <0.11.0.0
     , containers  >=0.5.0.1  && <0.7
     , data-hash   >=0.2.0.0  && <0.3.0.0
     , directory   >=1.3.0.0  && <1.4.0.0
     , filepath    >=1.4.0.0  && <1.5.0.0
     , mtl         >=2.0.0.0  && <2.3
     , text        >=1.2.3.0  && <2.0.0.0
     , vector      ==0.12.1.2
     , bitarray    ==0.0.1.1
  exposed-modules:
     Data.BloomFilter
  other-modules:
     Data.BloomFilter.Hash
     Data.BloomFilter.Util
     Data.BitArray.Extras
  c-sources: cbits/lookup3.c
  include-dirs:     cbits
  includes:         lookup3.h
  install-includes: lookup3.h
  default-extensions: OverloadedStrings

test-suite bloom-filter-tests
  import: common-dependencies
  import common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: hspec             >=2.6.0    && <2.8
               , QuickCheck        >=2.12     && <2.14
  other-modules:
  ghc-options:   -threaded
                 -rtsopts
                 -with-rtsopts=-N
